ags fixed notification history overflow, tweaks
Former-commit-id: e2f5ac28dcf68a4b6b45fb1743595c278d19ee99
Former-commit-id: 151fc0fa0dc116b2f73d3026397714a91e46c6ac

--- a/.config/ags/scss/notifications/notification-history.scss
+++ b/.config/ags/scss/notifications/notification-history.scss
@@ -6,10 +6,12 @@
   border-right: 0px;
   border-bottom: 0px;
   padding: 0rem;
+  min-width: 300px;
 }
 .notification-event {
   .notification {
-    margin: 1rem 1rem;
+    margin: 0.5rem 1rem;
+    min-width: 0px;
 
     .summary {
       color: $foreground;
