--- a/.config/ags/scss/notifications/notification.scss
+++ b/.config/ags/scss/notifications/notification.scss
@@ -24,8 +24,8 @@ window.notification-popups {
 
 .notification {
   @extend .module;
-  min-width: 350px;
-  border-radius: 11px;
+  min-width: 400px;
+  border-radius: 10px;
   padding: 1em;
   margin: 0rem;
   // border: 1px solid $background;
@@ -44,8 +44,6 @@ window.notification-popups {
     color: $background;
   }
   100% {
-    opacity: 1;
-    min-width: 350px;
   }
 }
 
